crates/gelx/tests/compile/macros/invalid_query.stderr
error: EdgeQLSyntaxError: Unexpected 'invalid' (on line 1, column 1)
 --> tests/compile/macros/invalid_query.rs:4:2
  |
4 |     gelx!(example_module, "invalid");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::exports::gelx_macros::gelx_raw` which comes from the expansion of the macro `gelx` (in Nightly builds, run with -Z macro-backtrace for more info)
